--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quran App</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/ico.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -25,7 +26,7 @@
       <div class="info">
         <div class="details">
           <div id="name" class="song-name">Song Name</div>
-          <div id="artist" class="artist-name">Artist Name</div>
+          <div id="artist" class="artist-name">ماهر المعيقلي</div>
         </div>
         <i class="fa-solid fa-heart"></i>
       </div>
