--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
           <div class="progress-fill"></div>
           <div class="progress-handle"></div>
         </div>
-
+        <div class="time">
+          <p id="current-time">00:00</p>
+          <p id="duration">00:38</p>
+        </div>
         <div class="control-btn">
           <button id="shuffle" class="btn">
             <i class="fa-solid fa-shuffle"></i>
@@ -55,6 +58,7 @@
         </div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
